change hi inner text

--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 <body>
 
 
-    <h1>Hello-Bootstrap</h1>
-
-    <p>hi i am mr khan</p>
+    <h1>Hello My Numan Khan</h1>
 
     <h1>Asalam O Aulikom. Dear Git!</h1>
-    <p>NEW PARAGRAPH HERE</p>
+
 
     <script src="app.js"></script>
 </body>
